k8s/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: default
spec:
  selector:
    app: cart-service
  ports:
  - port: 80
    targetPort: 5002
  type: ClusterIP
